# Regrade

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: build-mac.yml
client/: package.json  vite.config.ts
client/sidecar/: config.py  fetcher.py  gs_client.py  rate_limit.py  requirements.txt  sidecar_main.py
client/src/: App.tsx  env.d.ts  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
gradescope_bot/: analyzer.py  config.py  fetcher.py  gs_client.py  heartbeat.py  rate_limit.py  scheduler.py  serve.py  storage.py
gradescope_bot/static/: style.css
gradescope_bot/templates/: base.html  dashboard.html  item.html
scripts/: install-mac.sh  server-status.sh
server/: .env.example  pyproject.toml
server/poko_server/: __main__.py  analyzer.py  api.py  auth.py  config.py  db.py  jobs.py  metrics.py  notifications.py
server/prompts/: regrade_check.md  regrade_prescreen.md
server/tests/: conftest.py  test_analyzer.py  test_api_health.py  test_auth.py  test_db.py  test_integration.py  test_jobs.py  test_notifications.py  test_production.py  test_scores.py
server/tests/fixtures/: fake_claude_fail.sh  fake_claude_ok.sh  fake_prescreen_no.sh  fake_prescreen_yes.sh
tests/: conftest.py  test_analyzer_smoke.py  test_analyzer_subprocess.py  test_fetcher.py  test_gs_client_parsing.py  test_gs_client_pdf.py  test_live_login.py  test_live_pdf_download.py  test_rate_limiter.py  test_scheduler.py  test_storage.py
tests/e2e/: test_full_flow.py  test_sidecar_module_resolution.py
tests/fixtures/: dashboard_sample.html
(+41 files in other folders)
