[project]
name = "gradescope-bot"
version = "0.1.0"
description = "Personal Gradescope regrade-checker bot"
requires-python = ">=3.11"
dependencies = [
  "gradescopeapi==1.8.0",
  "beautifulsoup4>=4.12",
  "requests>=2.31",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "markdown-it-py>=3.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gradescope_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
